examples/negative/parse_errors/L4/reserved_array.ob
MODULE Reserved;

VAR ARRAY: INTEGER;

END Reserved.
